<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacer_inner"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:textSize="@dimen/title_main_size"/>

    <TextView
        android:id="@+id/et_title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_title"
        android:textSize="@dimen/subtitle_size"
        android:textColor="@color/black"
        android:labelFor="@id/et_input_create"
        android:layout_marginTop="@dimen/spacer_element"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/et_input_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/red"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btn_main_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/et_btn_create"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_text_size"
            android:enabled="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/list_title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_title"
        android:textSize="@dimen/subtitle_size"
        android:textColor="@color/black"
        android:labelFor="@id/et_input_create"
        android:layout_marginTop="@dimen/spacer_element"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_note" />

</LinearLayout>