<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacer_inner"
    tools:context=".NoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_note"
            android:textSize="@dimen/title_main_size"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/title_note_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_note_default"
            android:textSize="@dimen/title_note_size"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:labelFor="@id/et_note_text"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_note_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_note_default_size"
        android:layout_weight="1"
        android:padding="@dimen/et_note_margin"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:scrollbars="vertical"
        android:gravity="top"
        android:background="@drawable/et_note_border"
        android:layout_marginTop="@dimen/et_note_margin"
        android:layout_marginBottom="@dimen/et_note_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_note_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_note_save"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/red"
            android:backgroundTint="@color/black"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/btn_note_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_note_cancel"
            android:textSize="@dimen/btn_text_size"
            android:textColor="@color/red"
            android:backgroundTint="@color/black"/>
    </LinearLayout>

</LinearLayout>